Add package classes

--- a/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/PackageEdit.xaml
@@ -6,46 +6,96 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.PackagesPages.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
     Margin="2"
-    MinHeight="200">
-    <Grid DataContext="{Binding Package, RelativeSource={RelativeSource AncestorType=local:PackageEdit}}">
+    MinHeight="300"
+    MinWidth="400">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:PackageEdit}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <local:PackageSummary Package="{Binding}" />
+        <GroupBox>
+            <TextBlock Text="{Binding Package.Description}" />
+        </GroupBox>
 
-        <Grid Grid.Row="1" Margin="0,4">
+        <Grid Grid.Row="1" Margin="0,2,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock FontWeight="Bold" VerticalAlignment="Center">Versions</TextBlock>
-
-            <Button
-                Click="ButtonAdd_Click"
+            <TextBlock
+                Margin="4,0,0,0"
+                FontWeight="Bold"
+                VerticalAlignment="Center">
+                Versions
+            </TextBlock>
+            <ComboBox
                 Grid.Column="1"
-                Height="24"
-                ToolTip="Add new version">
-                <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
-            </Button>
+                ItemsSource="{Binding Versions}"
+                SelectedItem="{Binding SelectedVersion, Mode=TwoWay}"
+                SelectionChanged="ComboBox_SelectionChanged" />
         </Grid>
-        <ListBox
-            x:Name="ListBoxVersion"
-            ItemsSource="{Binding Versions}"
-            Grid.Row="2">
-            <ListBox.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Remove" Click="MenuItemRemove_Click">
-                        <MenuItem.Icon>
-                            <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                </ContextMenu>
-            </ListBox.ContextMenu>
-        </ListBox>
+
+        <GroupBox
+            Grid.Row="2"
+            Header="Classes"
+            Margin="0,2,0,0">
+            <Grid>
+                <ListBox
+                    Grid.Row="1"
+                    ItemsSource="{Binding PackageClasses}"
+                    SelectedItem="{Binding SelectedClass}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <StackPanel
+                    Orientation="Vertical"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center">
+                    <StackPanel.Style>
+                        <Style TargetType="StackPanel">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding PackageClasses.Count}" Value="0">
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </StackPanel.Style>
+                    <fonts:Icon
+                        Margin="0,0,4,0"
+                        FontSize="20"
+                        Text="{x:Static fonts:IconFont.Question}"
+                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.DisabledForegroundBrush}}" />
+                    <TextBlock
+                        Text="No compatible classes found."
+                        VerticalAlignment="Center"
+                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.DisabledForegroundBrush}}" />
+                </StackPanel>
+            </Grid>
+        </GroupBox>
+
+        <StackPanel
+            Grid.Row="3"
+            Orientation="Horizontal"
+            Margin="0,2,0,0">
+            <Button
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}"
+                BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}"
+                Click="ButtonRemove_Click">
+                <StackPanel Orientation="Horizontal">
+                    <fonts:Icon Margin="0,0,4,0" Text="{x:Static fonts:IconFont.Trash}" />
+                    <TextBlock Text="{Binding SelectedVersion, StringFormat='Delete v{0}'}" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
     </Grid>
 </UserControl>
