--- a/Automation/Automation.App/Views/PackagesPages/_Components/TargetPackageSummary.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/TargetPackageSummary.xaml
@@ -1,15 +1,12 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.PackagesPages.Components.PackageSummary"
+    x:Class="Automation.App.Views.PackagesPages._Components.TargetPackageSummary"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.PackagesPages.Components"
-    mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
+    xmlns:local="clr-namespace:Automation.App.Views.PackagesPages._Components">
     <GroupBox>
-        <Grid DataContext="{Binding Package, RelativeSource={RelativeSource AncestorType=local:PackageSummary}}">
+        <Grid DataContext="{Binding TargetPackage, RelativeSource={RelativeSource AncestorType=local:TargetPackageSummary}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="auto" />
@@ -25,7 +22,7 @@
             <TextBlock
                 Grid.Row="1"
                 Grid.ColumnSpan="2"
-                Text="{Binding Description}" />
+                Text="{Binding Class.Name}" />
         </Grid>
     </GroupBox>
 </UserControl>
