--- a/Automation/Automation.App/Views/PackagesPages/PackagesMainPage.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/PackagesMainPage.xaml
@@ -9,6 +9,5 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-
-    <components:PackageSelector PackageClicked="PackageSelector_PackageClicked" />
+    <components:PackageSelector />
 </UserControl>
