--- a/Automation/Automation.App/Views/PackagesPages/_Components/TargetPackageSummary.xaml
+++ b/Automation/Automation.App/Views/PackagesPages/_Components/TargetPackageSummary.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.PackagesPages._Components.TargetPackageSummary"
+    x:Class="Automation.App.Views.PackagesPages.Components.TargetPackageSummary"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.PackagesPages._Components">
+    xmlns:local="clr-namespace:Automation.App.Views.PackagesPages.Components">
     <GroupBox>
         <Grid DataContext="{Binding TargetPackage, RelativeSource={RelativeSource AncestorType=local:TargetPackageSummary}}">
             <Grid.ColumnDefinitions>
