--- a/Automation/Automation.App/Views/TasksPages/TaskUI/TaskSchedules.xaml
+++ b/Automation/Automation.App/Views/TasksPages/TaskUI/TaskSchedules.xaml
@@ -5,6 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.TasksPages.TaskUI"
+    xmlns:instances="clr-namespace:Automation.App.Views.TasksPages.Components.Instances"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
@@ -26,10 +27,10 @@
         </GroupBox>
 
         <GroupBox
-            Header="Servers"
+            Header="History"
             Grid.Row="2"
             Margin="0,4,0,0">
-            <TextBlock>List and priority of the servers to execute on</TextBlock>
+            <instances:ScopedInstanceList TargetId="{Binding Task.Id}" Type="Task" />
         </GroupBox>
     </Grid>
 </UserControl>
