Execute a task from the interface

--- a/Automation/Automation.App/Views/Menus/NavigationSideMenu.xaml
+++ b/Automation/Automation.App/Views/Menus/NavigationSideMenu.xaml
@@ -77,7 +77,7 @@
                 <fonts:Icon.Style>
                     <Style TargetType="{x:Type fonts:Icon}" BasedOn="{StaticResource {x:Type fonts:Icon}}">
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding CurrentPage}" Value="Workers">
+                            <DataTrigger Binding="{Binding CurrentPage}" Value="Packages">
                                 <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}" />
                             </DataTrigger>
                         </Style.Triggers>
