--- a/Automation/Automation.App/Views/TasksPages/TaskUI/TaskExecuteModal.xaml
+++ b/Automation/Automation.App/Views/TasksPages/TaskUI/TaskExecuteModal.xaml
@@ -1,22 +1,32 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.Inputs.TextBoxModal"
+    x:Class="Automation.App.Views.TasksPages.TaskUI.TaskExecuteModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components.Inputs"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.TaskUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    mc:Ignorable="d"
-    MinWidth="200">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:TextBoxModal}}}">
+    MinHeight="400"
+    MinWidth="400">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:TaskExecuteModal}}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <StackPanel Margin="4,10">
-            <TextBlock TextWrapping="Wrap" Text="{Binding SubTitle}" />
-            <TextBox x:Name="TextBoxValue" />
-        </StackPanel>
+
+        <Grid Margin="2,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Margin="0,8,0,4" FontWeight="Bold">Settings JSON</TextBlock>
+            <TextBox
+                Text="{Binding JsonSettings, Mode=TwoWay}"
+                Grid.Row="1"
+                TextWrapping="Wrap"
+                AcceptsReturn="True"
+                VerticalContentAlignment="Top" />
+        </Grid>
         <StackPanel
             Orientation="Horizontal"
             Grid.Row="1"
@@ -30,8 +40,8 @@
             </Button>
             <Button Command="{Binding ParentLayout.ValidateCommand}">
                 <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Check}" />
-                    <TextBlock Margin="4,0,0,0" Text="Ok" />
+                    <fonts:Icon Text="{x:Static fonts:IconFont.Play}" />
+                    <TextBlock Margin="4,0,0,0" Text="Execute" />
                 </StackPanel>
             </Button>
         </StackPanel>
