--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
@@ -4,24 +4,35 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    mc:Ignorable="d"
     xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
     xmlns:local="clr-namespace:Automation.App.Views.TasksPages.ScopeUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+    xmlns:instances="clr-namespace:Automation.App.Views.TasksPages.Components.Instances"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    <TabControl
-        x:Name="ScopeTabControl"
-        Margin="0,3,0,0"
-        DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:ScopePage}}">
-        <TabItem>
-            <TabItem.Header>
-                <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Gear}" />
-                    <TextBlock Margin="4,0,0,0">Settings</TextBlock>
-                </StackPanel>
-            </TabItem.Header>
-            <local:ScopeEdit Scope="{Binding Scope}" />
-        </TabItem>
-    </TabControl>
+    <Grid>
+        <TabControl
+            x:Name="ScopeTabControl"
+            Margin="0,3,0,0"
+            DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:ScopePage}}">
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <fonts:Icon Text="{x:Static fonts:IconFont.Clock}" />
+                        <TextBlock Margin="4,0,0,0">History</TextBlock>
+                    </StackPanel>
+                </TabItem.Header>
+                <instances:ScopedInstanceList TargetId="{Binding Scope.Id}" Type="Scope" />
+            </TabItem>
+        </TabControl>
+
+        <Button
+            Height="24"
+            Click="ButtonSettings_Click"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Margin="0,2,0,0">
+            <fonts:Icon Text="{x:Static fonts:IconFont.Gear}" />
+        </Button>
+    </Grid>
 </UserControl>
