--- a/Automation/Automation.App/Views/TasksPages/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/TasksPages/Components/ScopedSelector.xaml
@@ -10,36 +10,6 @@
     xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
-    <UserControl.Resources>
-        <ContextMenu x:Key="AddContextMenu" DataContext="{Binding PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
-            <MenuItem Header="Add">
-                <MenuItem.Icon>
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
-                </MenuItem.Icon>
-
-                <MenuItem Header="Add scope" Command="{Binding AddScopeCommand}">
-                    <MenuItem.Icon>
-                        <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand}">
-                    <MenuItem.Icon>
-                        <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem Header="Add task" Command="{Binding AddTaskCommand}">
-                    <MenuItem.Icon>
-                        <components:NodeIcon Type="Task" Margin="0,0,4,0" />
-                    </MenuItem.Icon>
-                </MenuItem>
-            </MenuItem>
-            <MenuItem Header="Remove" Command="{Binding RemoveSelectedCommand}">
-                <MenuItem.Icon>
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
-                </MenuItem.Icon>
-            </MenuItem>
-        </ContextMenu>
-    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -62,8 +32,10 @@
                 Click="Add_Click"
                 Grid.Column="1"
                 ToolTip="Add new"
-                ContextMenu="{StaticResource AddContextMenu}"
                 Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
+                <Button.ContextMenu>
+                    <local:ScopedContextMenu RootScope="{Binding RootScope}" Selected="{Binding Selected}" />
+                </Button.ContextMenu>
                 <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
             </Button>
         </Grid>
@@ -76,8 +48,10 @@
             ItemsSource="{Binding RootScope.SortedChildrens}"
             PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown"
             SelectedItemChanged="TreeView_SelectedItemChanged"
-            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}"
-            ContextMenu="{StaticResource AddContextMenu}">
+            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
+            <TreeView.ContextMenu>
+                <local:ScopedContextMenu RootScope="{Binding RootScope}" Selected="{Binding Selected}" />
+            </TreeView.ContextMenu>
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemStyle}">
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
