--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
@@ -18,6 +18,15 @@
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
+                        <fonts:Icon Text="{x:Static fonts:IconFont.List}" />
+                        <TextBlock Margin="4,0,0,0">Elements</TextBlock>
+                    </StackPanel>
+                </TabItem.Header>
+                <local:ScopeElements Scope="{Binding Scope}" />
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
                         <fonts:Icon Text="{x:Static fonts:IconFont.Clock}" />
                         <TextBlock Margin="4,0,0,0">History</TextBlock>
                     </StackPanel>
